--- a/index.html
+++ b/index.html
@@ -11,7 +11,65 @@
       crossorigin="anonymous"
     />
     <script src="./index.js" defer></script>
-    <title>Document</title>
+    <title>JS Validation</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <form id="form">
+        <div class="title">Get Started</div>
+
+        <!-- User Name input -->
+        <div>
+          <label for="username">User Name</label>
+          <i class="fas fa-user"></i>
+
+          <input type="text" id="username" placeholder="Username" />
+          <i class="fas fa-exclamation-circle failure-icon"></i>
+          <i class="fas fa-check-circle success-icon"></i>
+
+          <div class="error"></div>
+        </div>
+
+        <!-- Email input -->
+
+        <div>
+          <label for="email">Email</label>
+          <i class="far fa-envelope"></i>
+
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="abc@gmail.com"
+          />
+
+          <i class="fas fa-exclamation-circle failure-icon"></i>
+          <i class="far fa-check-circle success-icon"></i>
+
+          <div class="error"></div>
+        </div>
+
+        <!--   Password input -->
+
+        <div>
+          <label for="password">Password</label>
+          <i class="fas fa-lock"></i>
+
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Password here"
+          />
+
+          <i class="fas fa-exclamation-circle failure-icon"></i>
+          <i class="far fa-check-circle success-icon"></i>
+
+          <div class="error"></div>
+        </div>
+
+        <button id="btn" type="submit">Submit</button>
+      </form>
+    </div>
+  </body>
 </html>
