--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
           <label for="username">User Name</label>
           <i class="fas fa-user"></i>
 
-          <input type="text" id="username" placeholder="Username" />
+          <input
+            type="text"
+            id="username"
+            placeholder="Username"
+            autocomplete="false"
+          />
           <i class="fas fa-exclamation-circle failure-icon"></i>
           <i class="fas fa-check-circle success-icon"></i>
 
